--- a/.gitignore
+++ b/.gitignore
@@ -26,11 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+.env*.local
 
 # vercel
 .vercel
