--- a/.gitignore
+++ b/.gitignore
@@ -26,13 +26,14 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*
+.env*.local
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.env
 .env
 .env
 .env
